--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon --exec ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/mongoose": "^5.10.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.10",
+    "node-vault": "^0.9.21",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9"
+    "@types/cors": "^2.8.9",
+    "@types/express": "^4.17.9",
+    "typescript": "^4.1.3"
   }
 }
