--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,9 @@ services:
       - ./backend/:/app      
       - /app/node_modules      
     networks:
-      - backend  
+      - backend
+    depends_on:
+      - mongo
       
   nginx:
     restart: always
@@ -25,7 +27,20 @@ services:
       - '80:80' 
     networks:
       - backend
-    
+  mongo:
+    container_name: mongo
+    image: mongo
+    volumes:
+      - data:/data/db
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
+      MONGO_INITDB_DATABASE: abaotest
+    ports:
+      - '27017:27017'
+    networks:
+      - backend
+
 networks: 
   backend:
     driver: bridge
