--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,9 @@
-FROM node:12.2.0-alpine
+FROM node:12.2.0-slim
 
 WORKDIR /app
 
 COPY ./package.json /app
-RUN npm install
+RUN npm install node-sass --unsafe-permnpm install
 
 COPY . .
 
