--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,14 @@
     "mongoose": "^5.11.10",
     "node-vault": "^0.9.21",
     "nodemon": "^2.0.7",
+    "swagger-ui-express": "^4.1.6",
     "ts-node": "^9.1.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/mongoose": "^5.10.3",
+    "@types/swagger-ui-express": "^4.1.2",
     "typescript": "^4.1.3"
   }
 }
