--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,7 @@ FROM node:12.2.0-slim
 WORKDIR /app
 
 COPY ./package.json /app
-RUN npm install node-sass --unsafe-permnpm install
+RUN npm install
 
 COPY . .
 
