--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,6 @@
   "devDependencies": {
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
-    "@types/mongoose": "^5.10.3",
-    "typescript": "^4.1.3"
+    "@types/mongoose": "^5.10.3"
   }
 }
