--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.12",
     "@types/react": "^16.14.2",
@@ -16,20 +17,16 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.0",
     "react-scripts": "4.0.1",
-    "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "lint": "eslint './src/**/*.{ts,tsx,js,jsx}'",
+    "lint:fix": "eslint --fix './src/**/*.{ts,tsx,js,jsx}'",
+    "prettier": "prettier --write --config ./.prettierrc './src/**/*.{ts,tsx}'"
   },
   "browserslist": {
     "production": [
@@ -43,7 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@types/axios": "^0.14.0"
-  }
+  "devDependencies": {}
 }
