make frontend work => complete eslint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,8 @@
         "node": true
     },
     "extends": [
+		"plugin:prettier/recommended", // prettier를 먼저 동작시켜야 고쳐준다.
 		"plugin:react/recommended",
-		"plugin:prettier/recommended",
 		"airbnb"
     ],
     "parser": "@typescript-eslint/parser",
@@ -26,5 +26,40 @@
         "eslint-plugin-react-hooks"
     ],
     "rules": {
-    }
+		"indent": [
+			"error",
+			"tab"
+		], // indent는 tab으로 통일
+		"import/extensions" : 0, // 확장자 없이 기재 가능하게
+		"react/jsx-indent" : [2, "tab"], // jsx에서도 indent tab으로 통일
+		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }], // 확장자 설정
+		"linebreak-style": ["error", "unix"], // LF
+		"no-unused-vars": "warn", // 정의 후 사용하지 않은 변수는 경고만 하기
+		"no-use-before-define": 1, // 정의 전에 사용 금지
+		"no-console": 0, // console 사용하기
+		"camelcase": ["error", { "properties": "always" }], // 속성에 camelcase 사용
+		"no-tabs": 0, // tab 사용 안되는 rule
+		"operator-linebreak": 0, // 연산자는 라인 앞쪽에 위치해야하는 rule
+		"no-param-reassign": 0, // 파라미터는 지역변수로 받아서 쓰라는 rule
+    	"import/prefer-default-export": ["off"], // export const 문을 쓸때 에러를 내는 rule 해제
+		"react/prop-types": ["off"], // props의 타입체크를 처리에 proptypes가 아닌 typescript 사용 예정
+		"react/jsx-wrap-multilines": 0, // jsx에서 여러 줄에 걸쳐서 정의할 때 복잡한 rule 해제
+		"@typescript-eslint/explicit-module-boundary-types": 0, // function에 return 타입을 명시해야하는 rule 해제
+		"no-restricted-syntax": ["warn", "FunctionExpression", "WithStatement", "BinaryExpression"], // for in 사용
+		"react/jsx-props-no-spreading": ["warn"], // props로 받은 것 바로 props로 넘기기 허용
+		"max-len": ["warn"], // 길이 100이 넘어가도 warning 만 하기
+		"react/jsx-boolean-value": 0, // boolean 못넘기게 하는 룰 없애기
+		"react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
+		"@typescript-eslint/no-empty-function": 0, // ()=>{} 가능하게 하기
+		"comma-dangle": 0, // 마지막에 콤마 안붙여도 되게 하기
+		"object-curly-newline": 0, // {}에서 새로운 line에 매개변수 쓰지 않아도 되게
+		"quotes": 0, // string에 doublequotes 가능
+		"react/jsx-indent-props": [2, "tab"] // jsx props tab으로 들여쓰기
+	},
+	"settings": {
+		"import/resolver":
+		{"node":
+			{"extensions": [".js", ".jsx", ".ts", ".tsx"] }
+		}
+	}
 }
