--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,10 +1,9 @@
 {
-	"trailingComma": "es5",
-	"tabWidth": 4,
+	"trailingComma": "none",
 	"useTabs": true,
 	"semi": true,
-	"singleQuote": true,
-	"jsxSingleQuote": true,
+	"singleQuote": false,
+	"jsxSingleQuote": false,
 	"bracketSpacing": true,
 	"jsxBracketSameLine": false,
 	"endOfLine": "lf"
