--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,16 +20,16 @@
     "react-hook-form": "^6.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+	"web-vitals": "^0.2.4",
+	"eslint": "^5.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint './src/**/*.{ts,tsx,js,jsx}'",
-    "lint:fix": "eslint --fix './src/**/*.{ts,tsx,js,jsx}'",
-    "prettier": "prettier --write --config ./.prettierrc './src/**/*.{ts,tsx}'"
+    "lint": "eslint ./src/**/**.{ts,tsx,js,jsx}",
+    "prettier": "prettier --write --config ../.prettierrc.json ./src/*.{ts,tsx,js,jsx}"
   },
   "browserslist": {
     "production": [
