--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node src/index.ts"
+    "start": "nodemon --exec ts-node src/index.ts",
+    "lint": "eslint ./src/**/**.{ts,tsx}",
+    "lint:fix": "eslint --fix ./src/**/**.{ts,tsx}",
+    "prettier": "prettier --write --config ../.prettierrc.json ./src/*.{ts,tsx}"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.11.10",
