--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/**/**.{ts,tsx,js,jsx}",
+    "lint:fix": "eslint --fix ./src/**/**.{ts,tsx,js,jsx}",
     "prettier": "prettier --write --config ../.prettierrc.json ./src/**/**.{ts,tsx,js,jsx}"
   },
   "browserslist": {
