--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,6 @@
         "node": true
     },
     "extends": [
-		"plugin:prettier/recommended", // prettier를 먼저 동작시켜야 고쳐준다.
 		"plugin:react/recommended",
 		"airbnb"
     ],
@@ -56,7 +55,8 @@
 		"quotes": 0, // string에 doublequotes 가능
 		"react/jsx-indent-props": [2, "tab"], // jsx props tab으로 들여쓰기
 		"no-underscore-dangle": 0, // _ 쓰기
-		"no-shadow" : ["warn"] // 변수 가리기 경고만 하기
+		"no-shadow" : ["warn"], // 변수 가리기 경고만 하기
+		"jsx-a11y/click-events-have-key-events" : 0 // onClick쓰려면 다른 event handler도 등록해야하는 옵션 끄기
 	},
 	"settings": {
 		"import/resolver":
