--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,8 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/**/**.{ts,tsx,js,jsx}",
-    "lint:fix": "eslint --fix ./src/**/**.{ts,tsx,js,jsx}",
-    "prettier": "prettier --write --config ../.prettierrc.json ./src/**/**.{ts,tsx,js,jsx}"
+    "lint:fix": "eslint --fix ./src/**/**.{ts,tsx,js,jsx}"
   },
   "browserslist": {
     "production": [
@@ -45,7 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "eslint-config-prettier": "^7.2.0"
-  }
+  "devDependencies": {}
 }
