--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^6.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "typescript": "^4.1.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
