--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,8 +30,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src/**/**.{ts,tsx,js,jsx}",
-    "lint:fix": "eslint --fix ./src/**/**.{ts,tsx,js,jsx}"
+    "lint": "eslint --ext .ts,.tsx .",
+    "lint:fix": "eslint --fix --ext .ts --ext .tsx ."
   },
   "browserslist": {
     "production": [
