make place layout

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -93,7 +93,8 @@
 		], // jsx props tab으로 들여쓰기
 		"no-underscore-dangle": 0, // _ 쓰기
 		"no-shadow" : ["warn"], // 변수 가리기 경고만 하기
-		"jsx-a11y/click-events-have-key-events" : 0 // onClick쓰려면 다른 event handler도 등록해야하는 옵션 끄기
+		"jsx-a11y/click-events-have-key-events" : 0, // onClick쓰려면 다른 event handler도 등록해야하는 옵션 끄기
+		"no-unused-expressions" : 0 // 논리 연산 하기로 하기
 	},
 	"settings": {
 		"import/resolver": {
