--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.10",
     "node-vault": "^0.9.21",
     "nodemon": "^2.0.7",
@@ -30,6 +31,9 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/mongoose": "^5.10.3",
+    "@types/passport": "^1.0.6",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/passport-local": "^1.0.33",
     "@types/swagger-ui-express": "^4.1.2",
     "typescript": "^4.1.3"
   }
