--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
         
       - name: Build App
         run: |
-          npm run build
+           CI='' npm run build
         working-directory: ${{ env.working-directory }}
           
       - name: Deploy to S3
