--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,14 +51,14 @@ jobs:
            CI='' npm run build
         working-directory: ${{ env.working-directory }}
           
-      - name: Deploy to S3
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --acl public-read --delete
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_PRODUCTION_BUCKET_NAME }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          SOURCE_DIR: "frontend/build"
+      #- name: Deploy to S3
+      #  uses: jakejarvis/s3-sync-action@master
+      #  with:
+      #    args: --acl public-read --delete
+      #  env:
+      #    AWS_S3_BUCKET: ${{ secrets.AWS_PRODUCTION_BUCKET_NAME }}
+      #    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #    AWS_REGION: ${{ secrets.AWS_REGION }}
+      #    SOURCE_DIR: "frontend/build"
       
