--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,10 +44,7 @@
 				]
 			}
 		], // 확장자 설정
-		"linebreak-style": [
-			"error",
-			"unix"
-		], // LF
+		"linebreak-style": 0,
 		"no-unused-vars": "warn", // 정의 후 사용하지 않은 변수는 경고만 하기
 		"no-use-before-define": 1, // 정의 전에 사용 금지
 		"no-console": 0, // console 사용하기
