--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/mongoose": "^5.10.3",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.6",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
