--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "js-sha256": "^0.9.0",
     "jsonwebtoken": "^8.5.1",
