--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
     "@types/swagger-ui-express": "^4.1.2",
+    "dotenv": "^10.0.0",
     "typescript": "^4.1.3"
   }
 }
